--- a/roles/dvoting/tasks/config.yml
+++ b/roles/dvoting/tasks/config.yml
@@ -1,4 +1,4 @@
-- name: Configure app administrators
+- name: Configure app administrators (file 1-add_admin.sh by Linus)
   community.docker.docker_container_exec:
     container: "backend"
     command: "npx cli addAdmin --sciper {{ item }}"
