--- a/roles/dela_node/vars/dela_vars.yml
+++ b/roles/dela_node/vars/dela_vars.yml
@@ -9,3 +9,7 @@ dela:
   join_hash: '{{ _secrets.dela_join_hash }}'
   nodes: '{{ DELA_NODES | default([]) }}'
   admin_scipers: '{{ _secrets.voting_admin_scipers }}'
+  # TODO: ask Linus where this value is produced
+  grant_id: '45564f54'
+  # TODO DRY
+  frontend_url: 'https://{{ frontend_host | default("dvoting.epfl.ch") }}'
