--- a/inventories/hosts-demo.yml
+++ b/inventories/hosts-demo.yml
@@ -1,6 +1,6 @@
 all:
   hosts:
-    # itsevoting003.xaas.epfl.ch:
+    # itsevoting0003.xaas.epfl.ch:
     #   ansible_host: 10.95.96.145
     #   ansible_port: 22
     #   ansible_user: root
@@ -70,6 +70,7 @@ dela_nodes:
     MASTER_WORKER:
       host: itsevoting0008.xaas.epfl.ch
       node: evdemo1
+
     DOCKER_TLS_HOSTNAME: localhost
 
 dvoting_web:
@@ -78,4 +79,6 @@ dvoting_web:
       
   vars:
     frontend_host: "dvoting.fsd.team"
-    dela_node_url: "htps://evdemo1.fsd.team"
+    # TODO: find a way to get these two from MASTER_WORKER + nodes
+    dela_proxy_url: "https://evdemo1.fsd.team"
+    dela_node_url: "https://evdemo1n.fsd.team"
