--- a/roles/dela_node/tasks/admin.yml
+++ b/roles/dela_node/tasks/admin.yml
@@ -5,33 +5,6 @@
 
 # ---------------------------------------------------------- node configurations
 
-- name: Read dela node configuration (file 2-export-key.sh by Linus)
-  community.docker.docker_container_exec:
-    container: "dela-worker-{{ item.name }}"
-    command: "/bin/bash -c 'LLVL=error dvoting --config /data/node ordering export'"
-  with_items: "{{ dela.nodes }}"
-  register: nodes_config
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
-
-- name: Set dela node configuration as fact
-  ansible.builtin.set_fact:
-    dela_node_config: "{{ nodes_config.results | map(attribute='stdout') | list }}"
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
-
-- name: Gather dela node configuration from all nodes / hosts (all_dela_node_config)
-  ansible.builtin.set_fact:
-    all_dela_node_config: "{{ groups['dela_nodes'] | map('extract', hostvars, 'dela_node_config') | list | flatten }}"
-  when: inventory_hostname == MASTER_WORKER.host
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
 
 - name: Debug write the command for importing nodes to master node
   ansible.builtin.debug:
@@ -39,9 +12,7 @@
   when: inventory_hostname == MASTER_WORKER.host
   tags:
     - never
-    - dela.join
-    - dela.join_preview
-
+    - dela.debug
 
 - name: Add all nodes to the config configure (script 3-setup-members.sh by Linus)
   community.docker.docker_container_exec:
@@ -51,46 +22,26 @@
   tags:
     - never
     - dela.join
+    - dela.join_keys
+
+- name: Execute 3-setup-members from Linus scripts
+  ansible.builtin.shell: "{{ dela.init_dir }}/3-setup-members.sh"
+  when: inventory_hostname == MASTER_WORKER.host
+  tags:
+    - never
+    - dela.manual_join
 
 # -------------------------------------------------------------------- node keys
 
 # docker-compose exec dela-worker crypto bls signer read --path /data/node/private.key --format BASE64_PUBKEY
 
-- name: Read node public key (script 4-get-identity.sh by Linus)
-  community.docker.docker_container_exec:
-    container: "dela-worker-{{ item.name }}"
-    command: "/bin/bash -c 'crypto bls signer read --path /data/node/private.key --format BASE64_PUBKEY'"
-  with_items: "{{ dela.nodes }}"
-  register: node_keys
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
-
-- name: Set dela node public keys as fact for current host
-  ansible.builtin.set_fact:
-    dela_node_keys: "{{ node_keys.results | map(attribute='stdout') | list }}"
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
-
-
-- name: gather all dela node public keys
-  ansible.builtin.set_fact:
-    all_dela_node_keys: "{{ groups['dela_nodes'] | map('extract', hostvars, 'dela_node_keys') | list | flatten }}"
-  tags:
-    - never
-    - dela.join
-    - dela.join_preview
-
 - name: debug all_dela_node_keys
   ansible.builtin.debug:
     msg: "{{ all_dela_node_keys }}"
+  when: inventory_hostname == MASTER_WORKER.host
   tags:
     - never
-    - dela.join
-    - dela.join_preview
+    - dela.debug
 
 - name: debug preview add keys of all nodes
   ansible.builtin.debug:
@@ -98,9 +49,20 @@
   loop: "{{ dela.nodes | map(attribute='name') | product(all_dela_node_keys) }}"
   tags:
     - never
-    - dela.join
-    - dela.join_preview
+    - dela.debug
 
+- name: Execute 5-authorize-identities.sh from Linus scripts
+  ansible.builtin.shell: "{{ dela.init_dir }}/5-authorize-identities.sh"
+  tags:
+    - never
+    - dela.manual_join
+
+- name: Execute 6-update-access-contract.sh from Linus scripts
+  ansible.builtin.shell: "{{ dela.init_dir }}/6-update-access-contract.sh"
+  when: inventory_hostname == MASTER_WORKER.host
+  tags:
+    - never
+    - dela.manual_join
 
 - name: add keys of all nodes to all nodes (script 5-authorize-identities.sh by Linus)
   community.docker.docker_container_exec:
@@ -110,35 +72,67 @@
   tags:
     - never
     - dela.join
+    - dela.join_ids
 
 - name: configure voting pool on master node (script 6-update-access-contract.sh by Linus)
   community.docker.docker_container_exec:
     container: "dela-worker-{{ MASTER_WORKER.node }}"
-    command: >
-      /bin/bash -c ' \
-        LLVL=error \
-        dvoting \
-        --config /data/node pool add \
-        --key /data/node/private.key \
-        --args github.com/c4dt/dela.ContractArg \
-        --args github.com/c4dt/dela.Access \
-        --args access:grant_id \
-        --args {{ dela.grant_id }} \
-        --args access:grant_contract \
-        --args github.com/c4dt/dela.Evoting \
-        --args access:grant_command \
-        --args all \
-        --args access:identity \
-        --args {{ item }} \
-        --args access:command \
-        --args GRANT \
-      '
+    argv:
+      - "dvoting"
+      - "--config"
+      - "/data/node"
+      - "pool"
+      - "add"
+      - "--key"
+      - "--args"
+      - "github.com/c4dt/dela.ContractArg"
+      - "--args"
+      - "github.com/c4dt/dela.Access"
+      - "--args"
+      - "access:grant_id"
+      - "--args"
+      - "{{ dela.grant_id }}"
+      - "--args"
+      - "access:grant_contract"
+      - "--args"
+      - "github.com/c4dt/dela.Evoting"
+      - "--args"
+      - "access:grant_command"
+      - "--args"
+      - "all"
+      - "--args"
+      - "access:identity"
+      - "--args"
+      - "{{ item }}"
+      - "--args"
+      - "access:command"
+      - "--args"
+      - "GRANT"
+    # command: >
+    #   /bin/bash -c ' \
+    #     LLVL=error \
+    #     dvoting \
+    #     --config /data/node pool add\
+    #     --key /data/node/private.key\
+    #     --args github.com/c4dt/dela.ContractArg\
+    #     --args github.com/c4dt/dela.Access\
+    #     --args access:grant_id\
+    #     --args "45564f54\
+    #     --args access:grant_contract\
+    #     --args github.com/c4dt/dela.Evoting\
+    #     --args access:grant_command\
+    #     --args all\
+    #     --args access:identity\
+    #     --args {{ item }}\
+    #     --args access:command\
+    #     --args GRANT\
+    #   '
   with_items: "{{ all_dela_node_keys }}"
   when: inventory_hostname == MASTER_WORKER.host
   tags:
     - never
     - dela.join
-
+    - dela.join_ids
 
 
 # TODO: this does not work yet
