--- a/vars/global_vars.yml
+++ b/vars/global_vars.yml
@@ -28,3 +28,5 @@ dvoting:
   admin_scipers: '{{ _secrets.voting_admin_scipers }}'
   frontend_host: '{{ frontend_host | default("dvoting.epfl.ch") }}'
   frontend_url: 'https://{{ frontend_host | default("dvoting.epfl.ch") }}'
+  randomize_vote_id: "{{ 'false' if RUNENV == 'prod' else lookup('ansible.builtin.env', 'RANDOMIZE', default='true') }}"
+  devlogin: "{{ 'false' if RUNENV == 'prod' else lookup('ansible.builtin.env', 'DEVLOGIN', default='true') }}"
