[fix] automatic setup incomplete
- increase robustness of the setup script templates by crashing early
- -t dela.manual_join now reruns dela.config in order to be sure that the keys are actually present (the bug was indeed the fact that nodes were not ready when ansible were asking their keys)
- improve documentation on how to restart the demo

--- a/roles/dela_node/tasks/main.yml
+++ b/roles/dela_node/tasks/main.yml
@@ -45,6 +45,8 @@
       tags:
         - dela
         - dela.config
+        - dela.join
+        - dela.manual_join
 
 - name: Include dela admin task
   tags:
