[feat] add prod setup
this involves generalising few things to enable sharing of the same servers by several instances
the following procedure seams to be reliable/reproductible enough to nuke and recreate the network

./votsible.sh --prod -t reset -t reset_docker_yes_yes_please -t yes_please_reset_docker_volumes_too
./votsible.sh --prod -t traefik
./votsible.sh --prod -t dela
./votsible.sh --prod -t dela -t dela.manual_join
./votsible.sh --prod -t dvoting
./bin/fix_proxies_prod.sh

--- a/inventories/hosts-demo.yml
+++ b/inventories/hosts-demo.yml
@@ -36,6 +36,9 @@ all:
     RUNENV: demo
     DOMAINS:
       - fsd.team
+      - epfl.ch
+    CERTS_SRC: /keybase/team/epfl_evoting/certs
+
 
 dela_nodes:
   hosts:
@@ -45,8 +48,8 @@ dela_nodes:
           http_host: "evdemo1.fsd.team"
           http_port: "8080"
           node_host: "evdemo1n.fsd.team"
-          node_port: "2000"
-      TRAEFIK_CONSOLE_HOSTNAME: evtraefik.fsd.team
+          node_port: "2000" 
+      TRAEFIK_CONSOLE_HOSTNAME: "evtraefik.fsd.team"
     itsevoting0009.xaas.epfl.ch:
       DELA_NODES:
         - name: "evdemo2"
