--- a/inventories/hosts-prod.yml
+++ b/inventories/hosts-prod.yml
@@ -1,52 +1,88 @@
-conodes:
+all:
   hosts:
-    itsevoting0009.xaas.epfl.ch:
-      ansible_host: 10.95.96.166
-      ansible_port: 22
-      ansible_user: ubuntu
-  vars:
-    RUNENV: prod
-
-portal:
-  hosts:
+    # itsevoting0003.xaas.epfl.ch:
+    #   ansible_host: 10.95.96.145
+    #   ansible_port: 22
+    #   ansible_user: root
+    # itsevoting0004.xaas.epfl.ch:
+    #   ansible_host: 10.95.96.146
+    #   ansible_port: 22
+    #   ansible_user: root
+    # itsevoting0005.xaas.epfl.ch:
+    #   ansible_host: 10.95.96.147
+    #   ansible_port: 22
+    #   ansible_user: root
+    # itsevoting0006.xaas.epfl.ch:
+    #   ansible_host: 10.95.96.148
+    #   ansible_port: 22
+    #   ansible_user: root
     itsevoting0008.xaas.epfl.ch:
       ansible_host: 10.95.96.167
       ansible_port: 22
-      ansible_user: ubuntu
+      ansible_user: root
+    itsevoting0009.xaas.epfl.ch:
+      ansible_host: 10.95.96.166
+      ansible_port: 22
+      ansible_user: root
+    itsevoting0010.xaas.epfl.ch:
+      ansible_host: 10.95.96.173
+      ansible_port: 22
+      ansible_user: root
+    itsevoting0011.xaas.epfl.ch:
+      ansible_host: 10.95.96.174
+      ansible_port: 22
+      ansible_user: root
   vars:
     RUNENV: prod
+    DOMAINS:
+      - fsd.team
+      - epfl.ch
+    CERTS_SRC: /keybase/team/epfl_evoting/certs
 
-#conodes:
-#  hosts:
-#    evot0:
-#      # itsevoting0003
-#      ansible_host: 10.95.96.145
-#      ansible_port: 22
-#      ansible_user: ubuntu
-#    evot1:
-#      # itsevoting0004
-#      ansible_host: 10.95.96.146
-#      ansible_port: 22
-#      ansible_user: ubuntu
-#    evot2:
-#      # itsevoting0005
-#      ansible_host: 10.95.96.147
-#      ansible_port: 22
-#      ansible_user: ubuntu
-#  vars:
-#    INSTALL_DIR: /home/ubuntu
-#    MEMCOIN_VERSION: v0_4_5-alpha
-#    # RUNENV: test
-#    # SECRETS_FILE: secrets.yml
-#
-#frontend:
-#  hosts:
-#    evot3:
-#      # itsevoting0006
-#      ansible_host: 10.95.96.148
-#      ansible_port: 22
-#      ansible_user: ubuntu
-#  vars:
-#    INSTALL_DIR: /home/ubuntu
-#    # RUNENV: test
-#    # SECRETS_FILE: secrets.yml
+dela_nodes:
+  hosts:
+    itsevoting0008.xaas.epfl.ch:
+      DELA_NODES:
+        - name: "evprod1"
+          http_host: "dvot08.epfl.ch"
+          http_port: "8080"
+          node_host: "nvot08.epfl.ch"
+          node_port: "2000"
+      TRAEFIK_CONSOLE_HOSTNAME: evtraefik.fsd.team
+    itsevoting0009.xaas.epfl.ch:
+      DELA_NODES:
+        - name: "evprod2"
+          http_host: "dvot09.epfl.ch"
+          http_port: "8080"
+          node_host: "nvot09.epfl.ch"
+          node_port: "2000"
+    itsevoting0010.xaas.epfl.ch:
+      DELA_NODES:
+        - name: "evprod3"
+          http_host: "dvot10.epfl.ch"
+          http_port: "8080"
+          node_host: "nvot10.epfl.ch"
+          node_port: "2000"
+    itsevoting0011.xaas.epfl.ch:
+      DELA_NODES:
+        - name: "evprod4"
+          http_host: "dvot11.epfl.ch"
+          http_port: "8080"
+          node_host: "nvot11.epfl.ch"
+          node_port: "2000"
+  vars:
+    MASTER_WORKER:
+      host: itsevoting0008.xaas.epfl.ch
+      node: evprod1
+
+    DOCKER_TLS_HOSTNAME: localhost
+
+dvoting_web:
+  hosts:
+    itsevoting0008.xaas.epfl.ch:
+      
+  vars:
+    frontend_host: "voting2.epfl.ch"
+    # TODO: find a way to get these two from MASTER_WORKER + nodes
+    dela_proxy_url: "https://dvot08.epfl.ch"
+    dela_node_url: "https://nvot08.epfl.ch"
