[feat] explicit image tag
TODO: get rid of "latest" tag for production!!!

--- a/inventories/hosts-demo.yml
+++ b/inventories/hosts-demo.yml
@@ -71,6 +71,7 @@ dela_nodes:
           node_host: "evdemo4n.fsd.team"
           node_port: "2000"
   vars:
+    worker_image_tag: latest
     MASTER_WORKER:
       host: itsevoting0003.xaas.epfl.ch
       node: evdemo1
@@ -82,6 +83,8 @@ dvoting_web:
     itsevoting0003.xaas.epfl.ch:
 
   vars:
+    frontend_image_tag: latest
+    backend_image_tag: latest
     frontend_host: "dvoting.fsd.team"
     # TODO: find a way to get these two from MASTER_WORKER + nodes
     dela_proxy_url: "https://evdemo1.fsd.team"
