--- a/inventories/hosts-prod.yml
+++ b/inventories/hosts-prod.yml
@@ -85,7 +85,7 @@ dvoting_web:
   vars:
     frontend_image_tag: latest
     backend_image_tag: latest
-    frontend_host: "voting2.epfl.ch"
+    frontend_host: "voting.epfl.ch"
     # TODO: find a way to get these two from MASTER_WORKER + nodes
     dela_proxy_url: "https://dvot08.epfl.ch"
     dela_node_url: "https://nvot08.epfl.ch"
